--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,112 @@
-absl-py==0.10.0
-aiohttp==3.6.2
-argon2-cffi==20.1.0
-asn1crypto==0.24.0
+absl-py==0.15.0
+anyio==3.3.4
+argcomplete==1.12.3
+argon2-cffi==21.1.0
 astunparse==1.6.3
-async-generator==1.10
-async-timeout==3.0.1
-attrs==20.2.0
+attrs==21.2.0
 backcall==0.2.0
-bleach==3.2.1
-cachetools==4.1.1
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
-cryptography==2.1.4
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
+bleach==4.1.0
+cachetools==4.2.4
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+colorama==0.4.4
+cycler==0.11.0
+debugpy==1.5.1
+decorator==5.1.0
+defusedxml==0.7.1
 entrypoints==0.3
 gast==0.3.3
-google-auth==1.22.0
-google-auth-oauthlib==0.4.1
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.32.0
+grpcio==1.41.1
 h5py==2.10.0
-idna==2.6
-idna-ssl==1.1.0
+idna==3.3
 imageio==2.10.1
-importlib-metadata==2.0.0
-ipykernel==5.1.1
-ipython==7.16.1
+importlib-metadata==4.8.1
+importlib-resources==5.4.0
+ipykernel==6.5.0
+ipython==7.29.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.17.2
-Jinja2==2.11.2
-joblib==0.17.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console==6.2.0
-jupyter-core==4.6.3
-jupyter-http-over-ws==0.0.8
-jupyterlab-pygments==0.1.1
+ipywidgets==7.6.5
+jedi==0.18.0
+Jinja2==3.0.2
+joblib==1.1.0
+jsonschema==4.2.0
+jupyter-client==6.1.12
+jupyter-core==4.9.1
+jupyter-server==1.11.2
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
 Keras-Preprocessing==1.1.2
-keyring==10.6.0
-keyrings.alt==3.0
-kiwisolver==1.2.0
-Markdown==3.2.2
-MarkupSafe==1.1.1
-matplotlib==3.3.2
+kiwisolver==1.3.2
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+matplotlib-inline==0.1.3
 mistune==0.8.4
-multidict==4.7.6
-nbclient==0.5.0
-nbconvert==6.0.6
-nbformat==4.4.0
-nest-asyncio==1.4.1
-networkx==2.5.1
-notebook==6.1.4
+nbclient==0.5.4
+nbconvert==6.2.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.6.3
+notebook==6.4.5
 numpy==1.18.5
-oauthlib==3.1.0
-opencv-python==4.4.0.44
+oauthlib==3.1.1
+opencv-python==4.5.4.58
 opt-einsum==3.3.0
-packaging==20.4
-pandas==1.1.3
-pandocfilters==1.4.2
-parso==0.7.1
-pexpect==4.8.0
+packaging==21.2
+pandas==1.3.4
+pandocfilters==1.5.0
+parso==0.8.2
 pickleshare==0.7.5
-Pillow==7.2.0
-prometheus-client==0.8.0
-prompt-toolkit==3.0.7
-protobuf==3.13.0
-ptyprocess==0.6.0
+Pillow==8.4.0
+prometheus-client==0.12.0
+prompt-toolkit==3.0.22
+protobuf==3.19.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
-pycrypto==2.6.1
-Pygments==2.7.1
-pygobject==3.26.1
+Pygments==2.10.0
 pyparsing==2.4.7
-pyrsistent==0.17.3
-python-apt==1.6.5+ubuntu0.3
-python-dateutil==2.8.1
-pytz==2020.1
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.3
 PyWavelets==1.1.1
-pyxdg==0.25
-pyzmq==19.0.2
-qtconsole==4.7.7
-QtPy==1.9.0
-requests==2.24.0
+pywin32==302
+pywinpty==1.1.5
+pyzmq==22.3.0
+requests==2.26.0
 requests-oauthlib==1.3.0
-rsa==4.6
-scikit-image==0.17.2
-scikit-learn==0.23.2
-scipy==1.5.3
-seaborn==0.11.0
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-six==1.15.0
+rsa==4.7.2
+scikit-image==0.18.3
+scikit-learn==1.0.1
+scipy==1.7.1
+seaborn==0.11.2
+Send2Trash==1.8.0
+six==1.16.0
 sklearn==0.0
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
+sniffio==1.2.0
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.3.1
 tensorflow-estimator==2.3.0
-tensorflow-gpu==2.3.1
 termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl==2.1.0
-tifffile==2020.9.3
-tornado==6.0.4
-traitlets==4.3.3
-typing-extensions==3.7.4.3
-urllib3==1.25.10
+terminado==0.12.1
+testpath==0.5.0
+threadpoolctl==3.0.0
+tifffile==2021.11.2
+tornado==6.1
+traitlets==5.1.1
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+voila==0.2.16
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-yarl==1.6.0
-zipp==3.2.0
+websocket-client==1.2.1
+Werkzeug==2.0.2
+widgetsnbextension==3.5.2
+wrapt==1.13.3
+zipp==3.6.0
